# WS-Chat

./: .gitignore  .gitmodules  README.md  docker-compose.yaml
client/: .env  Dockerfile  default.conf  package.json
client/src/: App.vue  main.ts  store.ts
client/src/components/: ChatComponent.vue  Error.vue
client/src/plugins/: vuetify.ts
client/src/services/: WebSocketService.ts
server/: package.json  tsconfig.json
server/src/: index.js  server.ts
server/src/models/: ChatMessage.ts
server_cpp/: CMakeLists.txt  Dockerfile  install_deps.sh
server_cpp/include/server_cpp/: chat_service.hpp
server_cpp/src/: main.cpp
